# etoro_v3

./: .gitignore  AGENTS.md  CLAUDE.md  autonomy-hardening.patch  crontab.txt  doc_4d12f5dd6047_discovery-identity-verification.patch  etoro_v3_CRITICAL_missing_symbol.patch  etoro_v3_batch_instrument_metadata.patch  etoro_v3_consolidate_instrument_truth.patch  etoro_v3_instrument_map_fallback.patch  pyproject.toml  test_partial_close_live.py
config/: config.yaml  config.yaml.bak-experiment
data/: asia_au_yfinance_fix_report.csv  asia_cn_identity_verification.csv  asia_cn_yfinance_dryrun.csv  asia_jp_yfinance_fix_report.csv  audit_instrument_symbols_conflicts.csv  audit_instrument_symbols_progress.json  audit_instrument_symbols_report.csv  conflict_resolution_report.csv  eu_yfinance_fix_report.csv  eu_yfinance_fix_report_all.csv  experiment_hints.json  global_yfinance_fix_report.csv  instrument_map.json  llm_config_experiments.json  llm_decision_log.json  llm_ghost_blacklist.json  llm_news_flags.json  llm_position_recommendations.json  llm_position_review_outcomes.json  llm_signal_weights.json  llm_trading_memory.json  llm_veto_log.json  signal_scorecard.json  symbol_mapping.json
docs/: ghost-order-elimination-plan.md  llm_insights.md  trade-history-api.md
scripts/: audit_instrument_symbols.py  backfill_pnl.py  cleanup_instruments.py  close_violations.py  discovery_cron.py  etoro_kill_switch_watchdog.sh  fix_eu_yfinance_symbols.py  fix_instrument_ids.py  fix_symbol_mismatches.py  init_db.py  mark_scalp.py  migrate_min_position_amount.py  migrate_yf_symbol.py  (+4 more)
(+113 files in other folders)
