[project]
name = "etoro-bot-v3"
version = "3.0.0"
description = "eToro Autonomous Trading Bot V3"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "tenacity>=8.2",
    "yfinance>=0.2.40",
    "pandas>=2.0",
    "pandas-ta>=0.3",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
